<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        android:padding="20dp"
        app:cardBackgroundColor="@color/purple_500"
        app:cardElevation="5dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/source_language" />

                <Spinner
                    android:padding="5dp"
                    android:id="@+id/spinner_source_language"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="48dp"
                    android:entries="@array/source_languages"
                    android:prompt="@string/select_source_language_prompt" />

            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/to" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/target_language" />
                <Spinner
                    android:padding="5dp"
                    android:id="@+id/spinner_target_language"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="48dp"
                    android:entries="@array/target_languages"
                    android:prompt="@string/select_target_language_prompt" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_height="match_parent">



        <!-- EditText to enter the text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/enter_text" />

        <EditText
            android:padding="10dp"
            android:layout_margin="10dp"
            android:id="@+id/edit_text_source_text"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:inputType="textImeMultiLine"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:maxWidth="488dp"

            android:hint="@string/enter_text_to_translate"
            android:autofillHints="" />

        <!-- Button to initiate the translation -->
        <Button
            android:id="@+id/button_translate"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:text="@string/translate" />

        <!-- TextView to display the translated text -->
        <TextView
            android:id="@+id/text_view_translated_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:textAppearance="?android:textAppearanceMedium" />

        <!-- Button to copy the translated text -->
        <Button
            android:id="@+id/button_copy"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:text="@string/copy" />



        <Button
            android:id="@+id/imageToText"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:padding="15dp"

            android:visibility="gone"
            android:text="Image To Text"
            android:layout_height="wrap_content" />


    </LinearLayout>







</LinearLayout>