<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".LoginAndSignup">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/kpt"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:minHeight="48dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="Email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:minHeight="48dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:background="#007e33"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:text="Or"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignup"
        android:background="#007e33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/purple_200"
        android:gravity="end"
        android:textStyle="bold"
        android:textSize="16sp"
        android:padding="10dp"
        android:text="@string/forget_passord"
        android:layout_marginTop="16dp"/>

</LinearLayout>
